# MCD-ST

./: .gitignore  CADRAGE_PRODUIT.md  README.md  audit_externe.md  pyproject.toml
.github/workflows/: ci.yml
docs/: COHORTING_ENGINE_SPEC.md  EXTENSIONS_MODELE_METIER.md  MAPPING_ENGINE_SPEC.md  PERIMETRE_DONNEES_MCD.md  ROADMAP.md  SCHEMA_MCD_ST_V0_1.md  SPEC_PRODUIT.md  SPEC_UI_WEB.md
prototypes/mapping_poc/: NOTES.md  README.md  mapping_poc.py
src/mcdst/: __init__.py  api.py  cli.py  cohort.py  dry_run.py  engine.py  joins.py  learning.py  mapping.py  profiling.py  quality.py  registry.py  review.py  schema.py  sensitivity.py  source_graph.py  transforms.py  utils.py
src/mcdst/web/: app.css  app.js  index.html
tests/: support.py  test_mapping_engine.py
tests/fixtures/: mapping_poc_review_decisions.yaml
tests/fixtures/cohorts/: arret_avant_visite_reprise.yaml  manutention_avant_restriction.yaml  travailleurs_45_plus_manutention.yaml
tests/fixtures/mapping_poc_exports/: README.md  export_01_individus.csv  export_02_structures.csv  export_03_actes.csv  export_04_risques.csv  export_05_biometrie.csv  export_06_pathologies_atmp.csv  export_07_arrets.csv  export_08_vaccinations.csv  export_09_duerp.csv
tests/fixtures/semicolon_csv_export/: README.md  salaries_suivis_small.csv
