[project]
name = "mcdst"
version = "0.1.0"
description = "MCD-ST mapping and data quality engine"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
mcdst = "mcdst.cli:main"

[tool.setuptools.package-data]
mcdst = ["web/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
